# AI-Hel2

./: .gitignore  README.md  _explore_dbs.py  build-log.txt  check_db.py  check_relations.py  check_schema.py  check_schema2.py  index.html  latest.json  package-lock.json  package.json  pill.html  start.bat  start.ps1  tsconfig.node.json  tsconfig.tsbuildinfo  updater-fix.patch  vite.config.ts
src-tauri/: Cargo.toml  copy-agent.ps1  installer.nsh  tauri.conf.json  zip-agent.py
src-tauri/capabilities/: default.json
src-tauri/hermes-agent/: backfill_edges.py  config.yaml  debug_community.py  fix_backfill.py  start_heimdall.bat
src-tauri/hermes-agent/docs/: knowledge-ring-complete-architecture.md
src-tauri/hermes-agent/heimdall/: provider.py
src-tauri/hermes-agent/scripts/: maintain_dedup.py  tts_service.py
src-tauri/hermes-agent/tests/: benchmark_gemma4.py  test_importance.py
src-tauri/hermes-agent/tools/: nexus_tools.py
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_nexus_schema.sql  003_feedback_reason.sql  004_relations_columns.sql  005_inferred_edges.sql  006_community_id.sql  007_merge_content_file.sql  008_inferred_entities.sql
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: agent.rs  auth.rs  canvas.rs  chat.rs  config.rs  files.rs  gateway.rs  knowledge.rs  mod.rs  session.rs  voice.rs  voice_overlay.rs  wiki.rs
src-tauri/src/services/: agent_detector.rs  agent_manager.rs  agent_store.rs  asr_service.py  barge_in.py  canvas_service.rs  config_service.rs  connection_service.rs  extract_service.py  (+17 more)
(+226 files in other folders)
