[package]
name = "ai-hel2"
version = "0.2.0"
description = "AI-Hel2 — 3D Knowledge Sphere Desktop Assistant"
authors = ["AI-Hel2 Team"]
edition = "2021"

[lib]
name = "ai_hel2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.145"
serde_yaml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"] }
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "v5"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
base64 = "0.22"
mime_guess = "2"
strsim = "0.11"
regex = "1"
sha2 = "0.10"
argon2 = "0.5"
hex = "0.4"
rand = "0.8"
zip = "2"
walkdir = "2"
open = "5"
tiny_http = "0.12"
screenshots = "0.8"
cpal = "0.15"
hound = "3.5"

[profile.dev]
debug = 0
opt-level = 0
